# glider_hybrid_whoi

./: .dockerignore  .gitmodules  DevelopmentDiagram.graphml  README.md  uw_glider_interface.graphml
direct_kinematics_ros_plugins/: CMakeLists.txt  package.xml
direct_kinematics_ros_plugins/include/direct_kinematics_ros_plugins/: DirectKinematicsROSPlugin.hh
direct_kinematics_ros_plugins/src/: DirectKinematicsROSPlugin.cc
direct_kinematics_ros_plugins/test/: plotData.py  test_directKinematics.py  test_directKinematics_asv.py  test_directKinematics_plot.py
glider_deadreckoning/: CMakeLists.txt  package.xml
glider_deadreckoning/launch/: deadreckon.launch
glider_deadreckoning/nodes/: deadreckoning_estimator.py
glider_hybrid_whoi_control/: CMakeLists.txt  package.xml
glider_hybrid_whoi_control/config/: model_params.yaml
glider_hybrid_whoi_control/launch/: start_auv_teleop.launch  start_auv_teleop_asv.launch  start_control_allocator.launch  start_geometric_tracking_control.launch  start_nmb_sm_control.launch
glider_hybrid_whoi_control/rviz/: glider_hybrid_whoi_control.rviz
glider_hybrid_whoi_description/: CMakeLists.txt  package.xml
glider_hybrid_whoi_description/launch/: upload_glider_asv_kinematics.launch  upload_glider_hybrid_whoi.launch  upload_glider_hybrid_whoi_kinematics.launch  upload_glider_hybrid_whoi_test.launch
glider_hybrid_whoi_description/robots/: .glider_hybrid_whoi_default.urdf.xacro.swp  glider_asv_default_kinematics.urdf.xacro  glider_hybrid_whoi_default.urdf.xacro  glider_hybrid_whoi_default_kinematics.urdf.xacro  glider_hybrid_whoi_default_test.urdf.xacro
glider_hybrid_whoi_description/scripts/: spawn_model
glider_hybrid_whoi_description/test/: test_urdf_files.py  test_urdf_files.test
glider_hybrid_whoi_description/urdf/: glider_asv_base_kinematics.xacro  glider_asv_sensors_kinematics.xacro  glider_hybrid_whoi_base.xacro  glider_hybrid_whoi_base_kinematics.xacro  glider_hybrid_whoi_base_test.xacro  glider_hybrid_whoi_sensors.xacro  glider_hybrid_whoi_sensors_kinematics.xacro  glider_hybrid_whoi_sensors_test.xacro  glider_hybrid_whoi_snippets.xacro  uw_gps_plugin.xacro  uw_hector_gps_plugin.xacro  uw_hector_imu_plugin.xacro  uw_imu_plugin.xacro
glider_hybrid_whoi_gazebo/: CMakeLists.txt  package.xml
glider_hybrid_whoi_gazebo/launch/: BuzzBay.launch  BuzzBayDemo.launch  BuzzBay_stratified_current.launch  BuzzBay_stratified_current_docker.launch  BuzzBay_stratified_current_world.launch  PuertoRico.launch  Upload_asv_kinematics.launch  empty_underwater_world.launch  empty_underwater_world_kinematics.launch  glider.launch  glider_with_sensors.launch  record_demo.launch  seafloor_underwater_world.launch  start_demo_auv_control.launch  start_demo_kinematics.launch  start_demo_kinematics_stratified_current.launch  start_demo_kinematics_stratified_current_docker.launch  start_demo_kinematics_stratified_current_two_gliders.launch  start_demo_kinematics_stratified_current_with_asv.launch  start_demo_nmb_sm.launch  start_demo_teleop.launch  start_demo_teleop_kinematics.launch  start_demo_teleop_test.launch  start_waypoint_set.launch
glider_hybrid_whoi_gazebo/models/BuzzBay/: model.config  model.sdf
glider_hybrid_whoi_gazebo/worlds/: BuzzBay.world  BuzzBay_stratified_current.world  BuzzBay_stratified_current_docker.world  PuertoRico.world  empty_underwater.world  empty_underwater_kinematics.world  seafloor_underwater.world  seafloor_underwater_stratified_current.world  seafloor_underwater_stratified_current_docker.world  transientOceanCurrentDatabase.csv  transientOceanCurrentDatabase_test.csv  transientOceanCurrentDatabase_test_tides.csv  transientOceanCurrentDatabase_zero.csv
glider_hybrid_whoi_gazebo/worlds/Kolumbo_ocean_current/: ocean_current_avg_dive_a.csv  ocean_current_avg_dive_a_mean.csv  ocean_current_avg_dive_e.csv  ocean_current_avg_dive_e_mean.csv  ocean_current_avg_dive_f.csv  ocean_current_avg_dive_f_mean.csv  ocean_current_avg_dive_g.csv  ocean_current_avg_dive_g_mean.csv
glider_hybrid_whoi_ros_plugins/: CMakeLists.txt  package.xml
glider_hybrid_whoi_ros_plugins/include/glider_hybrid_whoi_ros_plugins/: UnderwaterGPSROSPlugin.hh  UnderwaterIMUROSPlugin.hh
glider_hybrid_whoi_ros_plugins/src/: UnderwaterGPSROSPlugin.cc  UnderwaterIMUROSPlugin.cc
glider_kinematics_gazebo_plugins/kinematics_control_plugins/: CMakeLists.txt
glider_kinematics_gazebo_plugins/kinematics_control_plugins/src/: direct_kinematics.cc
glider_kinematics_gazebo_plugins/kinematics_plugins/: CMakeLists.txt
glider_kinematics_gazebo_plugins/kinematics_plugins/src/: KinematicsPlugin.cc
glider_kinematics_gazebo_plugins/kinematics_ros_plugins/: CMakeLists.txt  package.xml
glider_kinematics_gazebo_plugins/kinematics_ros_plugins/src/: KinematicsROSPlugin.cc
hybrid_glider_gazebo_plugin_kinematics/kinematics_control_plugins/: package.xml
hybrid_glider_gazebo_plugin_kinematics/kinematics_control_plugins/src/: direct_kinematics.cc
hybrid_glider_gazebo_plugin_kinematics/kinematics_plugins/: package.xml
hybrid_glider_gazebo_plugin_kinematics/kinematics_plugins/src/: GaussMarkovProcess.cc  KinematicsPlugin.cc
hybrid_glider_gazebo_plugin_kinematics/kinematics_ros_plugins/: CMakeLists.txt  package.xml
hybrid_glider_gazebo_plugin_kinematics/kinematics_ros_plugins/src/: SphericalCoordinatesROSInterfacePlugin.cc
hybrid_glider_gazebo_plugins/hybrid_glider_gazebo_plugins/: CMakeLists.txt  package.xml
hybrid_glider_gazebo_plugins/hybrid_glider_gazebo_plugins/msgs/: Accel.proto  Double.proto
hybrid_glider_gazebo_plugins/hybrid_glider_gazebo_ros_plugins/: CMakeLists.txt  package.xml
kinematics_ros_plugins/: CMakeLists.txt  package.xml
kinematics_ros_plugins/scripts/: GliderKinematicsPlot.m  ascend.py  dive.py  test_directKinematics.py
kinematics_ros_plugins/src/: KinematicsROSPlugin.cc
kinematics_ros_plugins/test/: ascend.py  dive.py  test_directKinematics.py  test_directKinematics_ASV.py
nmea_publisher/: CMakeLists.txt  package.xml
nmea_publisher/launch/: nmea_publisher.launch
nmea_publisher/nodes/: nmea_publisher.py
(+4452 files in other folders)
