<?xml version="1.0"?>
<package format="2">
  <name>direct_kinematics_ros_plugins</name>
  <version>0.0.1</version>
  <description>
    Direct kinematics ROS plugin for ROS node to interface between gazebo model and outside world (e.g. backseat driver)
  </description>

  <maintainer email="woensug.choi.ks@nps.edu">Woensug Choi</maintainer>
  <author email="woensug.choi.ks@nps.edu">Woensug Choi</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>uuv_sensor_ros_plugins_msgs</depend>
  <depend>uuv_gazebo_ros_plugins_msgs</depend>
  <depend>frl_vehicle_msgs</depend>
  <depend>message_runtime</depend>
  <depend>gazebo_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>eigen</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>

</package>
