<?xml version="1.0"?>
<package format="2">
  <name>glider_deadreckoning</name>
  <version>0.0.0</version>
  <description>The glider_deadreckoning package</description>
  <maintainer email="briansbingham@gmail.com">bsb</maintainer>
  <license>TODO</license>

  <depend>ropspy</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
