<?xml version="1.0"?>
<package format="2">
  <name>glider_hybrid_whoi_control</name>
  <version>0.1.6</version>
  <description>Configuration and launch files to control the Hybrid glider WHOI</description>

  <maintainer email="woensug.choi.ks@nps.edu">Woensug Choi</maintainer>

  <author email="woensug.choi.ks@nps.edu">Woensug Choi</author>

  <license>Apache-2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>uuv_teleop</exec_depend>
  <exec_depend>uuv_trajectory_control</exec_depend>
</package>
