<?xml version="1.0"?>
<package format="2">
  <name>glider_hybrid_whoi_description</name>
  <version>0.0.1</version>
  <description>Robot description for the hybrid glider WHOI</description>

  <maintainer email="woensug.choi.ks@nps.edu">Woensug Choi</maintainer>

  <author email="woensug.choi.ks@nps.edu">Woensug Choi</author>


  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>kinematics_ros_plugins</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>python3-pyproj</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>rosunit</test_depend>

</package>
