<?xml version="1.0"?>
<package format="2">
  <name>glider_hybrid_whoi_gazebo</name>
  <version>0.1.6</version>
  <description>Hybrid glider WHOI</description>

  <maintainer email="woensug.choi.ks@nps.edu">Woensug Choi</maintainer>

  <author email="woensug.choi.ks@nps.edu">Woensug Choi</author>


  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>glider_hybrid_whoi_description</exec_depend>
  <exec_depend>glider_hybrid_whoi_control</exec_depend>

</package>
