<?xml version="1.0"?>
<package format="2">
  <name>kinematics_ros_plugins</name>
  <version>0.6.13</version>
  <description>The kinematics_ros_plugins package</description>

  <maintainer email="woensug.choi.ks@nps.edu">Woensug Choi</maintainer>
  <author email="woensug.choi.ks@nps.edu">Woensug Choi</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>roscpp</depend>
  <depend>kinematics_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>kinematics_ros_plugins_msgs</depend>
  <depend>frl_vehicle_msgs</depend>
  <depend>gazebo_dev</depend>

  <export>
  </export>
</package>
