<?xml version="1.0"?>
<package format="2">
  <name>direct_kinematics_gazebo_plugins</name>
  <version>0.0.1</version>
  <description>
    Direct kinematics control plugin
  </description>

  <maintainer email="woensug.choi.ks@nps.edu">Woensug Choi</maintainer>
  <author email="woensug.choi.ks@nps.edu">Woensug Choi</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>protobuf-dev</depend>
  <depend>eigen</depend>

  <test_depend>rosunit</test_depend>

</package>
