<?xml version="1.0"?>
<package format="2">
  <name>kinematics_plugins</name>
  <version>0.0.1</version>
  <description>The kinematics_plugins package</description>

  <maintainer email="woensug.choi.ks@nps.edu">Woensug Choi</maintainer>
  <author email="woensug.choi.ks@nps.edu">Woensug Choi</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>

  <export>
  </export>
</package>
