<?xml version="1.0"?>
<package format="2">
  <name>hybrid_glider_gazebo_ros_plugins</name>
  <version>0.0.1</version>
  <description>
      Hybrid Glider Simulator's extended ROS plugins for generation of the necessary
      ROS services and topics during the simulation. Modified from UUV Simulator
  </description>

  <maintainer email="woensug.choi.ks@nps.edu">Woensug Choi</maintainer>
  <author email="woensug.choi.ks@nps.edu">Woensug Choi</author>

  <license>Apache-2.0</license>
  <depend>hybrid_glider_gazebo_plugins</depend>
  <depend>hybrid_glider_gazebo_ros_plugins_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>gazebo_dev</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
